# file-cleaner

./: .gitignore  Cargo.toml  README.md
src/: main.rs
ui/: app-window.slint
