[package]
edition = "2021"
name = "file_cleaner"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = {version = "4.5", features = ["derive"]}
hex = "0.4"
log = "0.4"
prost = "0.13"
sha2 = "0.10"
sled = "0.34"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync"]}
tracing-subscriber = "0.3"
walkdir = "2.5"
