[package]
edition = "2021"
name = "file-cleaner"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
slint = "1.14.1"
walkdir = "2.5.0"
wildmatch = "2.6.1"

[build-dependencies]
anyhow = "1.0.100"
slint-build = "1.14.1"

[package.metadata.bundle]
resources = ["font/NotoSansSC-Regular.ttf"]
